--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
 body {
-    padding-bottom: 15%;
+  padding-bottom: 15%;
 }
 
 footer {
-  background-image: linear-gradient(to right, #0f2d37, #d70080); 
-  position: fixed; 
+  background-image: linear-gradient(to right, #0f2d37, #d70080);
+  position: fixed;
   /* padding: 3px 3px 0px 10px;  */
   bottom: 0;
   height: 10%;
   width: 100%;
 }
 
-input {
-  margin: 20px;
-}
-
-#login-container, #signup-container {
+#login-container,
+#signup-container {
   display: flex;
   border-style: solid;
   border-radius: 15px;
@@ -25,9 +22,25 @@ input {
   margin: auto;
 }
 
-#login-form, #signup-form {
+#login-form,
+#signup-form {
   margin: auto;
   max-width: 500px;
   padding: 20px;
 }
 
+.registration-container {
+  display: flex;
+  border-style: solid;
+  border-radius: 15px;
+  background-color: rgba(57, 202, 221, 0.5);
+  max-width: 1500px;
+  height: 70vh;
+  margin: auto;
+}
+
+.registration-form {
+  margin: auto;
+  max-width: 1200px;
+  padding: 20px;
+}
