--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,28 @@ footer {
   border-style: solid;
   border-radius: 15px;
   background-color: rgba(57, 202, 221, 0.5);
-  max-width: 1500px;
-  height: 70vh;
+  /* max-width: 1500px; */
+  height: auto;
   margin: auto;
 }
 
 .registration-form {
   margin: auto;
-  max-width: 1200px;
   padding: 20px;
+}
+
+.border1 {
+  border: 1px solid black;
+}
+
+.row {
+  margin: 3px;
+}
+
+.col {
+  margin: 3px;
+}
+
+hr {
+  border-top: 1px dashed black;
 }
