--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,24 @@ section {
   height: 85vh;
 }
 
-.registration-container {
-  display: none;
+.home-container {
+  margin-bottom: 20px;
+  width: 80vh;
+  height: 80vh;
+  overflow: scroll;
+}
+
+.registration-containers {
   border-style: solid;
   border-radius: 15px;
   background-color: rgba(203, 225, 228, 0.5);
   /* max-width: 1500px; */
   height: auto;
   margin: auto;
+}
+
+.registration-container {
+  display: none;
 }
 
 .registration-form {
