--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,12 @@ hr {
 input {
   margin: 5px;
 }
+
+.required:after {
+    content:" *";
+    color: red;
+  }
+  
 /* FONT */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
