--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -20,16 +20,17 @@ footer {
   display: flex;
   border-style: solid;
   border-radius: 15px;
-  background-color: rgba(57, 202, 221, 0.5);
+  background-color: rgb(255,184,243);
   max-width: 50vh;
-  height: 70vh;
+  min-height: 70vh;
+  height: auto;
   margin: auto;
 }
 
 #login-form,
 #signup-form {
   margin: auto;
-  max-width: 50vh;
+  max-width: 35vh;
   padding: 20px;
 }
 
